@@ -1,6 +1,7 @@
 2012-03-27  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Fixed bug #35242: Class 'tx_solr_fileindexer_Queue' not found in Reindexer Scheduler Task
+	* Fixed an issue where the Index Queue initializer would create an invalid SQL WHERE clause when no conditions were detected from TCA configuration of a table
 
 2012-02-23  Ingo Renner  <ingo.renner@dkd.de>
 
